--- a/ToolBox/pages/RubyPage.xaml
+++ b/ToolBox/pages/RubyPage.xaml
@@ -1,14 +1,17 @@
 ﻿<Page
-    x:Class="ToolBox.MainPage"
+    x:Class="ToolBox.pages.RubyPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ToolBox"
+    xmlns:local="using:ToolBox.pages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <StackPanel Orientation="Vertical">
-        <Button Click="Button_Click">RubyPage</Button>
+        <TextBlock x:Name="tb" Margin="4">Turn kanji to ruby!</TextBlock>
+        <TextBox x:Name="textBox" MaxHeight="200" AcceptsReturn="True" TextWrapping="Wrap"></TextBox>
+        <Button Click="Button_Click" Margin="3">change</Button>
+        <WebView Name="webview" Height="415" Margin="3"></WebView>
     </StackPanel>
 </Page>
